--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,13 @@
   text-align: center;
   width: 200px;
 }
+
+footer {
+  background-color: #282c34;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
